# docs/swagger.yaml
@@ -3,6 +3,7 @@ definitions:
   handler.CurrentUserResponse:
     properties:
       userGUID:
+        example: 123e4567-e89b-12d3-a456-426614174000
         type: string
     type: object
   handler.LogoutResponse:
@@ -21,7 +22,7 @@ definitions:
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
         type: string
     type: object
-  handler.TokensPair:
+  model.TokensPair:
     properties:
       accessToken:
         description: |-
@@ -46,7 +47,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Создает новую пару JWT-токенов и сохраняет refresh-токен в БД
+      description: 'Создает новую пару JWT-токенов и сохраняет refresh-токен в БД.
+        Пример запроса: GET /api-auth/get-tokens?guid=123e4567-e89b-12d3-a456-426614174000'
       parameters:
       - description: GUID (UUID) пользователя
         in: query
@@ -57,15 +59,16 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'успешный ответ" example:`{"access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+            "refresh_token": "vcSi0369y1I62wOpxZFpgZ......"}`'
           schema:
-            $ref: '#/definitions/handler.TokensPair'
+            $ref: '#/definitions/model.TokensPair'
         "400":
-          description: Неверный запрос
+          description: невалидный или отсутствующий GUID
           schema:
             type: string
         "500":
-          description: Ошибка генерации или сохранения токенов
+          description: ошибка сохранения refresh-токена
           schema:
             type: string
       security:
@@ -75,9 +78,8 @@ paths:
       - Authentication
   /logout:
     post:
-      consumes:
-      - application/json
-      description: Инвалидирует refresh-токен и завершает сеанс пользователя
+      description: 'Инвалидирует refresh-токен и завершает сеанс пользователя. Пример
+        запроса: POST /api-auth/logout с заголовком Authorization: Bearer <access_token>'
       parameters:
       - default: Bearer <access_token>
         description: Bearer токен
@@ -89,15 +91,15 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'Успешный выход" example:`{"message": "выполнен выход из аккаунта"}`'
           schema:
             $ref: '#/definitions/handler.LogoutResponse'
         "400":
-          description: Ошибка при выполнении выхода
+          description: ошибка запроса" example:"ошибка запроса
           schema:
             type: string
         "401":
-          description: Пользователь не авторизован
+          description: пользователь не авторизован" example:"не авторизован
           schema:
             type: string
       security:
@@ -107,7 +109,8 @@ paths:
       - Authentication
   /me:
     get:
-      description: Извлекает GUID (UUID) пользователя из JWT-токена
+      description: 'Извлекает GUID (UUID) пользователя из JWT-токена. Пример запроса:
+        GET /api-auth/me с заголовком Authorization: Bearer <access_token>'
       parameters:
       - default: Bearer <access_token>
         description: Bearer токен
@@ -119,11 +122,12 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'Успешный ответ" example:`{"user_guid": "123e4567-e89b-12d3-a456-426614174000"}`'
           schema:
             $ref: '#/definitions/handler.CurrentUserResponse'
         "401":
-          description: Пользователь не авторизован
+          description: Пользователь не авторизован или токен недействителен" example:"не
+            авторизован
           schema:
             type: string
       security:
@@ -135,7 +139,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: Обновляет пару JWT-токенов по refresh-токену с проверкой IP и User-Agent
+      description: 'Обновляет пару JWT-токенов по refresh-токену с проверкой IP и
+        User-Agent. Пример запроса: POST /api-auth/refresh-token с заголовком Authorization:
+        Bearer <access_token> и телом {"refresh_token": "<refresh_token>"}'
       parameters:
       - default: Bearer <access_token>
         description: Access токен
@@ -153,15 +159,16 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'успешное обновление токенов" example:`{"access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+            "refresh_token": "vcSi0369y1I62wOpxZFpgZ......"}`'
           schema:
-            $ref: '#/definitions/handler.TokensPair'
+            $ref: '#/definitions/model.TokensPair'
         "400":
-          description: Неверный формат данных
+          description: неверный JSON в теле запроса" example:"неверный json
           schema:
             type: string
         "401":
-          description: Недействительный токен
+          description: не удалось обновить токены" example:"не удалось обновить токены
           schema:
             type: string
       security:
